# avbroot

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.extra.md  README.md  README.ru.md  README.src.md  RELEASE.md  avbroot.py  deny.toml  requirements.txt  tox.ini
.cargo/: config.toml
.github/actions/preload-img-cache/: action.yml
.github/actions/preload-magisk-cache/: action.yml
.github/actions/preload-tox-cache/: action.yml
.github/workflows/: ci.yml  deny.yml  modules.yml  nrg.yml  release.yml
avbroot/: Cargo.toml  __init__.py  boot.py  build.rs  external.py  main.py  openssl.py  ota.py  util.py  vbmeta.py
avbroot/formats/: bootimage.py  compression.py  cpio.py  padding.py
avbroot/protobuf/: ota_metadata.proto  update_metadata.proto
avbroot/src/: boot.rs  crypto.rs  escape.rs  lib.rs  main.rs  octal.rs  protobuf.rs  stream.rs  util.rs
avbroot/src/cli/: args.rs  avb.rs  boot.rs  completion.rs  cpio.rs  fec.rs  hashtree.rs  key.rs  lp.rs  mod.rs  ota.rs  payload.rs  ramdisk.rs  sparse.rs  zip.rs
avbroot/src/format/: avb.rs  bootimage.rs  compression.rs  cpio.rs  fec.rs  hashtree.rs  lp.rs  mod.rs  ota.rs  padding.rs  payload.rs  sparse.rs  verityrs.rs  zip.rs
avbroot/src/patch/: boot.rs  mod.rs  otacert.rs  system.rs
avbroot/tests/: avb.rs  bootimage.rs  compression.rs  cpio.rs  lp.rs  otacert.rs  sparse.rs
avbroot/tests/data/: archive.cpio  boot_v0.img  boot_v1.img  boot_v3.img  boot_v4.img  boot_v4_vts.img  vbmeta_appended.img  vbmeta_appended_hash.img  vbmeta_appended_hash_tree.img  vbmeta_root.img  vendor_v3.img  vendor_v4.img
clearotacerts/: build.py
e2e/: Cargo.toml  README.md  e2e.toml
e2e/keys/: ORIG_KEY_DO_NOT_USE_avb.key  ORIG_KEY_DO_NOT_USE_ota.crt  TEST_KEY_DO_NOT_USE_ota.key
e2e/keys/avb_ml_dsa/: ORIG_KEY_DO_NOT_USE.key  ORIG_KEY_DO_NOT_USE.pass  ORIG_KEY_DO_NOT_USE.pkmd  ORIG_KEY_DO_NOT_USE.pub  TEST_KEY_DO_NOT_USE.key  TEST_KEY_DO_NOT_USE.pass  TEST_KEY_DO_NOT_USE.pkmd  TEST_KEY_DO_NOT_USE.pub
e2e/keys/avb_rsa/: ORIG_KEY_DO_NOT_USE.pass  ORIG_KEY_DO_NOT_USE.pub  TEST_KEY_DO_NOT_USE.key  TEST_KEY_DO_NOT_USE.pass  TEST_KEY_DO_NOT_USE.pub
e2e/keys/ota/: ORIG_KEY_DO_NOT_USE.key  ORIG_KEY_DO_NOT_USE.pass  TEST_KEY_DO_NOT_USE.crt  TEST_KEY_DO_NOT_USE.pass
e2e/src/: cli.rs  config.rs  download.rs  main.rs
extra/: README.md  bootimagetool.py  cpiotool.py
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/: build.sh
fuzz/corpus/avb/vbmeta_appended_hash/: avb.toml
fuzz/corpus/avb/vbmeta_appended_hash_tree/: avb.toml  raw.img
fuzz/corpus/avb/vbmeta_root/: avb.toml
fuzz/corpus/bootimage/boot_v0/: boot.toml
fuzz/corpus/bootimage/boot_v1/: boot.toml  second.img
fuzz/corpus/bootimage/boot_v2/: boot.toml  kernel.img  ramdisk.img.0  recovery_dtbo.img
fuzz/corpus/bootimage/boot_v3/: boot.toml
fuzz/corpus/bootimage/boot_v4/: boot.toml
fuzz/corpus/bootimage/boot_v4_vts/vts_signature/: avb.toml
fuzz/corpus/bootimage/vendor_v3/: boot.toml
fuzz/corpus/bootimage/vendor_v4/: boot.toml  bootconfig.txt  dtb.img  ramdisk.img.0  ramdisk.img.1  ramdisk.img.2  ramdisk.img.3
fuzz/corpus/cpio/test/: cpio.toml
fuzz/corpus/lp/super_empty/: lp.toml
fuzz/corpus/sparse/foobar/: input.img
fuzz/hfuzz_workspace/avb/input/: vbmeta_appended_hash.img  vbmeta_appended_hash_tree.img  vbmeta_root.img
fuzz/hfuzz_workspace/bootimage/input/: boot_v0.img  boot_v1.img  boot_v2.img  boot_v3.img  boot_v4.img  boot_v4_vts.img  vendor_v3.img  vendor_v4.img
fuzz/hfuzz_workspace/cpio/input/: test.cpio
fuzz/hfuzz_workspace/fec/input/: foobar.fec
init/: Android.mk  init.c
modules/: build.py
modules/clearotacerts/: module.prop
modules/oemunlockonboot/: Main.java  module.prop  service.sh
protobuf/: ota_metadata.proto
signapk/: build.gradle.kts  settings.gradle.kts
src/: boot.rs  crypto.rs  lib.rs  stream.rs
src/cli/: args.rs  ota.rs
src/format/: ota.rs  padding.rs
tests/: README.md  avb.rs  bootimage.rs  config.py  downloader.py  tests.conf  tests.py  tests.yaml  tests_containerized.py
tests/data/: boot_v2.img
tests/distros/: Containerfile.alpine  Containerfile.arch  Containerfile.arch-wine  Containerfile.debian  Containerfile.fedora  Containerfile.opensuse  Containerfile.ubuntu  Containerfile.ubuntu-lts
tests/distros/wine/: pacman.additional.conf  python3.sh
tests/keys/: TEST_KEY_DO_NOT_USE_avb.key  TEST_KEY_DO_NOT_USE_ota.key
tests_ci/: dummy_image.py  test_db.toml  test_device.py
vm/: build.prop  build.py  init  inittab  minicpio.py  startup
xtask/: Cargo.toml  README.md
xtask/src/: changelog.rs  fuzz_corpus.rs  main.rs  module.rs  version.rs
