[workspace]
default-members = ["avbroot"]
members = ["avbroot", "e2e", "fuzz", "xtask"]
resolver = "2"

[workspace.package]
version = "3.17.2"
license = "GPL-3.0-only"
edition = "2024"
repository = "https://github.com/chenxiaolong/avbroot"

[workspace.lints.clippy]
cast_lossless = "deny"
missing_fields_in_debug = "warn"
redundant_clone = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
